<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backButton="false"
        app:title="@string/app_full_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_20"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_activity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_250">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/activity" />
                </LinearLayout>
            </RelativeLayout>

            <View style="@style/HorizontalLineStyle" />

            <RelativeLayout
                android:id="@+id/rl_broadcast_receiver"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_250">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/broadcast_receiver" />
                </LinearLayout>
            </RelativeLayout>

            <View style="@style/HorizontalLineStyle" />

            <RelativeLayout
                android:id="@+id/rl_bitmap"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_250">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/bitmap" />
                </LinearLayout>
            </RelativeLayout>

            <View style="@style/HorizontalLineStyle" />

            <RelativeLayout
                android:id="@+id/rl_animation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_250">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/animation" />
                </LinearLayout>
            </RelativeLayout>

            <View style="@style/HorizontalLineStyle" />

            <RelativeLayout
                android:id="@+id/rl_event"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_250">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/event" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <View style="@style/VerticalLineStyle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_fragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_250">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/fragment" />
                </LinearLayout>
            </RelativeLayout>

            <View style="@style/HorizontalLineStyle" />

            <RelativeLayout
                android:id="@+id/rl_content_provider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_250">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/content_provider" />
                </LinearLayout>
            </RelativeLayout>

            <View style="@style/HorizontalLineStyle" />

            <RelativeLayout
                android:id="@+id/rl_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_250">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/view" />
                </LinearLayout>
            </RelativeLayout>

            <View style="@style/HorizontalLineStyle" />

            <RelativeLayout
                android:id="@+id/rl_window"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_250">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/window" />
                </LinearLayout>
            </RelativeLayout>

            <View style="@style/HorizontalLineStyle" />

            <RelativeLayout
                android:id="@+id/rl_thread"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_250">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/thread" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <View style="@style/VerticalLineStyle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_service"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_250">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/service" />
                </LinearLayout>
            </RelativeLayout>

            <View style="@style/HorizontalLineStyle" />

            <RelativeLayout
                android:id="@+id/rl_data_store"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_250">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/data_store" />
                </LinearLayout>
            </RelativeLayout>

            <View style="@style/HorizontalLineStyle" />

            <RelativeLayout
                android:id="@+id/rl_animation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_250">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/animation" />
                </LinearLayout>
            </RelativeLayout>

            <View style="@style/HorizontalLineStyle" />

            <RelativeLayout
                android:id="@+id/rl_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_250">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/layout" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>